melhoria da pasta

--- a/desktop/tasks.json
+++ b/desktop/tasks.json
@@ -1,6 +1,8 @@
 [
-    {"label": "Minicurso OpenCV", "value": "opencv"},
-    {"label": "Minicurso AutoCAD", "value": "autocad"},
-    {"label": "Minicurso Power BI", "value": "powerbi"}
+    {"label": "Abertura da XI SECAE", "value": "abertura"},
+    {"label": "IEEE IFF Macaé - Apresentação do Ramo e Processo Seletivo", "value": "ieee"},
+    {"label": "Apresentação Lab IF Maker", "value": "maker"},
+    {"label": "Apresentação Atlética Lagartos", "value": "atletica"},
+    {"label": "Apresentação Empresa Júnior (Root Locus)", "value": "empresa_junior"}
 ]
 
